# codyco-y4-viz

testbot_description/: CMakeLists.txt  README.md
testbot_description/data/: forceplate.mat  human_state.mat  robot.mat
testbot_description/data/Sub48/: human_state.mat
testbot_description/data/Sub48/HRIexample/Meri020/: forceplate.mat  robot.mat
testbot_description/data/Sub48/HRIexample/MeriPesi022/: Sigmay.mat  Y_nonsparse.mat  b_D.mat  b_Y.mat  forceplate.mat  human_state.mat  muBarD.mat  mud.mat  robot.mat  sigmaBarD_inv.mat  sigmaDg_inv.mat  sigmad_inv.mat  sigmay_inv.mat  y.mat
testbot_description/data/Sub48/XsensTest/N-pose/Marta001/: human_state.mat
testbot_description/data/Sub48/XsensTest/N-pose/Marta003/: human_state.mat
testbot_description/data/Sub48/XsensTest/N-pose/Marta004/: human_state.mat
testbot_description/data/Sub48/XsensTest/N-pose/Marta005/: human_state.mat
testbot_description/data/Sub48/XsensTest/N-pose/Marta006/: human_state.mat
testbot_description/data/Sub48/XsensTest/T-pose/Marta001/: human_state.mat
testbot_description/data/Sub48/XsensTest/T-pose/Marta002/: human_state.mat
testbot_description/data/Sub48/XsensTest/T-pose/Marta003/: human_state.mat
testbot_description/data/Sub48/XsensTest/T-pose/Marta004/: human_state.mat
testbot_description/data/Sub48/XsensTest/T-pose/Marta005/: human_state.mat
testbot_description/launch/: XsensTest.launch  displayHRI.launch  displayHalfPhantom.launch  displayHumanYARP.launch  displayiCub.launch  displayiCubYARP.launch
testbot_description/src/: fp_wrenchLeft_publisher.cpp  fp_wrenchRight_publisher.cpp  icub_state_publisher.cpp  icub_wrenchLeft_publisher.cpp  icub_wrenchRight_publisher.cpp  icub_wrench_publisher.cpp  joint_state_publisher.cpp  tf_broadcaster.cpp  tf_phantomTransform_broadcaster.cpp  tf_simpleTransform_broadcaster.cpp  wrench_stamped_publisher.cpp
testbot_description/urdf/: XSensURDF.urdf  XSensURDF.xml  forceplate.xml  iCubGenova03.xml  pelvis.xml  tile.xml  twoLegs.xml
yarp-ros/: CMakeLists.txt
yarp-ros/src/: geometry_msgs_TransformStamped.h  geometry_msgs_Wrench.h  geometry_msgs_WrenchStamped.h  listener.cpp  sensor_msgs_JointState.h  yarp_icub_state_publisher.cpp  yarp_wrench_stamped_publisher.cpp
